--- a/user/package.json
+++ b/user/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.4.0",
+    "@nextui-org/react": "^2.6.11",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-spring/web": "^9.7.5",
     "axios": "^1.7.9",
