--- a/user/package.json
+++ b/user/package.json
@@ -21,6 +21,8 @@
     "@nextui-org/react": "^2.6.11",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-spring/web": "^9.7.5",
+    "@stripe/react-stripe-js": "^3.4.0",
+    "@stripe/stripe-js": "^6.0.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +35,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-model": "^4.3.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^7.1.2",
     "react-spinners": "^0.15.0",
@@ -41,6 +44,8 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "stripe": "^17.7.0",
+    "stripe-checkout": "^1.0.9",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "toastify": "^2.0.1",
