--- a/user/package.json
+++ b/user/package.json
@@ -38,12 +38,14 @@
     "react-model": "^4.3.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^7.1.2",
+    "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "stripe": "^17.7.0",
     "stripe-checkout": "^1.0.9",
     "tailwind-merge": "^2.6.0",
