--- a/user/package.json
+++ b/user/package.json
@@ -27,8 +27,12 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "file-save": "^0.2.0",
+    "file-saver": "^2.0.5",
     "fontawesome": "^5.6.3",
     "fortawesome": "^0.0.1-security",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.469.0",
     "or": "^0.2.0",
     "react": "^18.3.1",
@@ -51,7 +55,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "toastify": "^2.0.1",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
